Some panels which are using dialogs could use subviews instead
Panels like Accessibility
, Privacy & Security
and System
have established the navigation pattern of top-level list rows with subviews for further settings, but this isn't a consistent navigation scheme across all panels. There are many places in Settings where a floating dialog is being used which could be converted into a subview to keep the navigation hierarchy within the window.
A not-comprehensive list of dialogs that could be converted to subviews:
-
Apps > File and & Link Associations: !2665 (merged) -
Apps > Storage: !2665 (merged) -
Apps > Required Permissions: !2665 (merged) -
Wi-Fi > Saved Networks -
Sound > Volume Levels: !2667 (merged) -
Power > Automatic Suspend: !2717 (merged) -
Keyboard > Compose Key: !2666 (merged) -
Keyboard > View And Customize Shortcuts: !2676 -
Notifications > [Any App]: !2668 (merged) -
Search > Search Locations !2447 (merged) -
Sharing > File Sharing: !2669 -
Sharing > Media Sharing: !2669 -
System > Secure Shell
Edited by Matthijs Velsink