apps: Turn dialogs into subpages

Turn the "Storage", "Required Permissions" and "File and Link Associations"
into subpages. Doing so, the navigation in Settings will be more consistent.

See https://gitlab.gnome.org/GNOME/gnome-control-center/-/issues/3020